verif/test/deca/context/invalid/object/class-not-found-verif.res
src/test/deca/context/invalid/object/class-not-found.deca:8:4: The type 'UndefinedClass' is not defined in the environment of types
